<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.coins.list.CoinsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_coin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_4x"
            android:text="@string/cryptocurrency"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_price_filter"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_10x"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_4x"
            android:layout_marginEnd="@dimen/spacing_2x"
            android:text="@string/price"
            android:textAlignment="center"
            app:closeIcon="@drawable/ic_down_arrow"
            app:closeIconEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/et_time_filter"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_coin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_time_filter"
            style="@style/Widget.MyTheme.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_10x"
            android:layout_marginTop="@dimen/spacing_4x"
            android:layout_marginEnd="@dimen/spacing_2x"
            app:endIconDrawable="@drawable/ic_drop_down"
            app:layout_constraintEnd_toStartOf="@id/chip_market_cap_filter"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/chip_price_filter"
            app:layout_constraintTop_toBottomOf="@id/tv_coin">

            <AutoCompleteTextView
                android:id="@+id/av_time_filter_drop_down"
                style="@style/Widget.MyTheme.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_base"
                android:paddingEnd="@dimen/spacing_base"
                android:text="@string/_24h"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_market_cap_filter"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_10x"
            android:layout_marginTop="@dimen/spacing_4x"
            android:layout_marginEnd="@dimen/spacing_4x"
            android:text="@string/market_cap"
            android:textAlignment="center"
            app:closeIcon="@drawable/ic_down_arrow"
            app:closeIconEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/et_time_filter"
            app:layout_constraintTop_toBottomOf="@+id/tv_coin" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sr_coin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_4x"
            android:layout_marginEnd="@dimen/spacing_4x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_time_filter">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_coins"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>